--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,13 +1,8 @@
 /* write your override styles here */
-#wall .tag-1 {
+body #wall .tag-1 {
   display: none;
 }
 
-#wall #tag-2 {
+body #wall #tag-2 {
   display: none;
 }
-
-#wall #tag-3 {
-  display: none;
-}
-
