--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,6 +11,6 @@ body #wall #tag-3.slick.wicked {
   display: none;
 }
 
-body .parent #tag-5.slick.wicked {
+body #wall .parent #tag-4{
   display: none;
 }
